--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Beijing University of Posts and Telecommunications, Beijing </p>
 <ul>
 <li><p><b>Peng Wang</b>, Huikang Liu, Zirui Zhou, Anthony Man-Cho So. Optimal Non-Convex Exact Recovery in Stochastic Block Model via Projected Power Method. <b><i>ICML 2021</i></b>. [<a href="https://arxiv.org/pdf/2106.05644.pdf">paper</a>]</p>
 </li>
-<li><p><b>Peng Wang</b>, Zirui Zhou, Anthony Man-Cho So. A Nearly-Linear Time Algorithm for Exact Community Recovery in Stochastic Block Model. <b><i>ICML 2020</i></b>. [<a href="http://proceedings.mlr.press/v119/wang20ac/wang20ac.pdf">paper</a>]</p>
+<li><p><b>Peng Wang</b>*, Zirui Zhou*, Anthony Man-Cho So. A Nearly-Linear Time Algorithm for Exact Community Recovery in Stochastic Block Model. <b><i>ICML 2020</i></b>. [<a href="http://proceedings.mlr.press/v119/wang20ac/wang20ac.pdf">paper</a>]</p>
 </li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Globally Convergent Accelerated Proximal Alternating Maximization Method for L1-Principal Component Analysis. <b><i>ICASSP 2019</i></b> (IEEE SPS Student Travel Award). [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=8682499">paper</a>]</p>
 </li>
@@ -93,7 +93,7 @@ Beijing University of Posts and Telecommunications, Beijing </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-10 09:47:31 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-10 10:05:39 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
