--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ University of Michigan, Ann Arbor <br />
 </td></tr></table>
 <h2>Research Interests </h2>
 <p>My research interests mainly lie in optimization theory and methods for non-convex optimization and their applications in machine learning, signal processing, and data sciences. 
-Recently, I am especially interested in convergence analysis for structured non-convex problems, such as subspace recovery, community detection, and constriained PCA.</p>
+Recently, I am especially interested in theoretical understanding of simple and scalable methods for structured non-convex problems, such as subspace recovery, community detection, and constriained PCA.</p>
 <h2>Work Experience</h2>
 <ul>
 <li><p>Postdoc Research Fellow &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;      <i>Dec 2021 &ndash; Present</i><br /></p>
@@ -93,7 +93,7 @@ Beijing University of Posts and Telecommunications, Beijing </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-10 10:05:39 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-10 10:35:46 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
