--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@ Recently, I am especially interested in theoretical understanding of simple and 
 <li><p>Department of Systems Engineering and Engineering Management<br />
 The Chinese University of Hong Kong, Hong Kong</p>
 </li>
-<li><p>Advisors: <a href="https://www1.se.cuhk.edu.hk/~manchoso/">Anthony Man-Cho So</a> &amp; <a href="https://www.math.ucdavis.edu/~sqma/">Shiqian Ma</a></p>
+<li><p>Advisors: <a href="https://www1.se.cuhk.edu.hk/~manchoso/">Anthony Man-Cho So</a> &amp; <a href="https://www.math.ucdavis.edu/~sqma/">Shiqian Ma</a> </p>
+</li>
+<li><p>Thesis: Fast First-Order Methods for Structured Non-Convex Non-Smooth Problems with Provable Guarantees [<a href="https://www.proquest.com/openview/efedba6fef3198199f507741c3cfb1bf/1?pq-origsite=gscholar&amp;cbl=2026366&amp;diss=y">Thesis</a>]</p>
 </li></ul>
 </li>
 <li><p>Bachelor in Engineering Management &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i>2012 &ndash; 2016</i> <br /></p>
@@ -93,7 +95,7 @@ Beijing University of Posts and Telecommunications, Beijing </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-10 10:35:46 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-11 11:22:49 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
