--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ University of Michigan, Ann Arbor <br />
 </td></tr></table>
 <h2>Research Interests </h2>
 <p>My research interests mainly lie in optimization theory and methods for non-convex optimization and their applications in machine learning, signal processing, and data sciences. 
-Recently, I am especially interested in theoretical understanding of simple and scalable methods for structured non-convex problems, such as subspace recovery, community detection, and constriained PCA.</p>
+Recently, I am especially interested in theoretical understanding of simple and scalable methods for structured non-convex problems, such as subspace recovery, community detection, and constriained PCA. </p>
+<p><b> Feel free to email me if you are interested in my research. Remote collaboration is also welcome!</b> </p>
 <h2>Work Experience</h2>
 <ul>
 <li><p>Postdoc Research Fellow &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;      <i>Dec 2021 &ndash; Present</i><br /></p>
@@ -51,20 +52,20 @@ Recently, I am especially interested in theoretical understanding of simple and 
 </ul>
 <h2>Education </h2>
 <ul>
-<li><p>Ph.D. in Systems Engineering and Engineering Management &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i>2016 &ndash; 2020</i><br /></p>
+<li><p>Ph.D. in Systems Engineering and Engineering Management &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i>2016 &ndash; 2020</i><br />
+</p>
 <ul>
-<li><p>Department of Systems Engineering and Engineering Management<br />
-The Chinese University of Hong Kong, Hong Kong</p>
+<li><p>The Chinese University of Hong Kong, Hong Kong</p>
 </li>
 <li><p>Advisors: <a href="https://www1.se.cuhk.edu.hk/~manchoso/">Anthony Man-Cho So</a> &amp; <a href="https://www.math.ucdavis.edu/~sqma/">Shiqian Ma</a> </p>
 </li>
 <li><p>Thesis: Fast First-Order Methods for Structured Non-Convex Non-Smooth Problems with Provable Guarantees [<a href="https://www.proquest.com/openview/efedba6fef3198199f507741c3cfb1bf/1?pq-origsite=gscholar&amp;cbl=2026366&amp;diss=y">Thesis</a>]</p>
 </li></ul>
 </li>
-<li><p>Bachelor in Engineering Management &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i>2012 &ndash; 2016</i> <br /></p>
+<li><p>Bachelor in Engineering Management &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i>2012 &ndash; 2016</i> <br />
+</p>
 <ul>
-<li><p>School of Economics and Management <br /> 
-Beijing University of Posts and Telecommunications, Beijing </p>
+<li><p>Beijing University of Posts and Telecommunications, Beijing </p>
 </li>
 </ul>
 
@@ -79,6 +80,8 @@ Beijing University of Posts and Telecommunications, Beijing </p>
 </ul>
 <h2>Conference Papers</h2>
 <ul>
+<li><p>Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Exact Community Recovery over Signed Graphs. Accepted by <b><i>AISTATS 2022</i></b>.</p>
+</li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Zirui Zhou, Anthony Man-Cho So. Optimal Non-Convex Exact Recovery in Stochastic Block Model via Projected Power Method. <b><i>ICML 2021</i></b>. [<a href="https://arxiv.org/pdf/2106.05644.pdf">paper</a>]</p>
 </li>
 <li><p><b>Peng Wang</b>*, Zirui Zhou*, Anthony Man-Cho So. A Nearly-Linear Time Algorithm for Exact Community Recovery in Stochastic Block Model. <b><i>ICML 2020</i></b>. [<a href="http://proceedings.mlr.press/v119/wang20ac/wang20ac.pdf">paper</a>]</p>
@@ -90,12 +93,12 @@ Beijing University of Posts and Telecommunications, Beijing </p>
 </ul>
 <h2>Professional Service</h2>
 <ul>
-<li><p>Reviewer: ICML 2021; AISTATS 2022; SIOPT</p>
+<li><p>Reviewer: ICML 2021; AISTATS 2022; SIOPT (3 times)</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-18 15:56:15 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-18 13:41:48 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
