--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Recently, I am especially interested in theoretical understanding of simple and 
 </ul>
 <h2>Conference Papers</h2>
 <ul>
-<li><p>Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Exact Community Recovery over Signed Graphs. Accepted by <b><i>AISTATS 2022</i></b>.</p>
+<li><p>Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Exact Community Recovery over Signed Graphs. Accepted by <b><i>AISTATS 2022</i></b>. [<a href="https://arxiv.org/pdf/2202.12255.pdf">paper</a>]</p>
 </li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Zirui Zhou, Anthony Man-Cho So. Optimal Non-Convex Exact Recovery in Stochastic Block Model via Projected Power Method. <b><i>ICML 2021</i></b>. [<a href="https://arxiv.org/pdf/2106.05644.pdf">paper</a>]</p>
 </li>
@@ -93,12 +93,12 @@ Recently, I am especially interested in theoretical understanding of simple and 
 </ul>
 <h2>Professional Service</h2>
 <ul>
-<li><p>Reviewer: ICML 2021; AISTATS 2022; SIOPT (3 times)</p>
+<li><p>Reviewer:  SIOPT (3 times); IEEE Transactions on Information Theory (1 times); ICML 2021, 2022; AISTATS 2022;</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-18 13:41:48 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-24 21:46:35 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
