--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@ Recently, I am especially interested in theoretical understanding of simple and 
 </ul>
 <h2>Professional Service</h2>
 <ul>
-<li><p>Reviewer:  SIOPT (3 times); IEEE Transactions on Information Theory (1 times); ICML 2021, 2022; AISTATS 2022;</p>
+<li><p>Reviewer: for SIAM Journal on Optimization (3 times); IEEE Transactions on Information Theory (1 times); ICML 2021, 2022; AISTATS 2022;</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-24 21:46:35 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-24 21:51:45 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
