--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Recently, I am especially interested in theoretical understanding of simple and 
 <ul>
 <li><p><b>Peng Wang</b>, Zirui Zhou, Anthony Man-Cho So. Non-Convex Exact Community Recovery in Stochastic Block Model. Accepted for publication in <b><i>Mathematical Programming, Series A</i></b>, 2021. [<a href="https://arxiv.org/pdf/2006.15843v4.pdf">paper</a>] </p>
 </li>
-<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-PCA. Submitted to <b><i>SIAM Journal on Optimization</i></b>, 2021. [<a href="https://arxiv.org/pdf/2107.07107.pdf">paper</a>] </p>
+<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-PCA. Under revision in <b><i>SIAM Journal on Optimization</i></b>, 2022. [<a href="https://arxiv.org/pdf/2107.07107.pdf">paper</a>] </p>
 </li>
 </ul>
 <h2>Conference Papers</h2>
@@ -98,7 +98,7 @@ Recently, I am especially interested in theoretical understanding of simple and 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-24 21:51:45 Eastern Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-05 16:36:43 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
