--- a/index.html
+++ b/index.html
@@ -71,16 +71,33 @@ Recently, I am especially interested in theoretical understanding of simple and 
 
 </li>
 </ul>
+<h2>News </h2>
+<ul>
+<li><p>[May 15, 2022] One paper accepted by ICML 2022.</p>
+</li>
+<li><p>[January 18, 2022] One paper accepted by AISTATS 2022.
+
+
+
+
+
+</p>
+</li>
+</ul>
 <h2>Journal Papers</h2>
 <ul>
 <li><p><b>Peng Wang</b>, Zirui Zhou, Anthony Man-Cho So. Non-Convex Exact Community Recovery in Stochastic Block Model. Accepted for publication in <b><i>Mathematical Programming, Series A</i></b>, 2021. [<a href="https://arxiv.org/pdf/2006.15843v4.pdf">paper</a>] </p>
 </li>
-<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-PCA. Under revision in <b><i>SIAM Journal on Optimization</i></b>, 2022. [<a href="https://arxiv.org/pdf/2107.07107.pdf">paper</a>] </p>
+<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. Under revision in <b><i>SIAM Journal on Optimization</i></b>, 2022. [<a href="https://arxiv.org/pdf/2107.07107.pdf">paper</a>] </p>
+</li>
+<li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. Proximal Alternating Linearized Minimization Method with Non-Linear Extrapolation for Rotationally Invariant L1-Norm Principal Component Analysis. In preparation for <b><i>IEEE Transactions on Signal Processing</i></b>, 2022.</p>
 </li>
 </ul>
 <h2>Conference Papers</h2>
 <ul>
-<li><p>Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Exact Community Recovery over Signed Graphs. Accepted by <b><i>AISTATS 2022</i></b>. [<a href="https://arxiv.org/pdf/2202.12255.pdf">paper</a>]</p>
+<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Luara Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. Accepted by <b><i>ICML 2022</i></b>. </p>
+</li>
+<li><p>Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Exact Community Recovery over Signed Graphs. <b><i>AISTATS 2022</i></b>. [<a href="https://arxiv.org/pdf/2202.12255.pdf">paper</a>]</p>
 </li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Zirui Zhou, Anthony Man-Cho So. Optimal Non-Convex Exact Recovery in Stochastic Block Model via Projected Power Method. <b><i>ICML 2021</i></b>. [<a href="https://arxiv.org/pdf/2106.05644.pdf">paper</a>]</p>
 </li>
@@ -98,7 +115,7 @@ Recently, I am especially interested in theoretical understanding of simple and 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-05 16:36:43 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-15 11:11:41 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
