--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Recently, I am especially interested in theoretical understanding of simple and 
 </ul>
 <h2>Conference Papers</h2>
 <ul>
-<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Luara Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. Accepted by <b><i>ICML 2022</i></b>. </p>
+<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Laura Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. Accepted by <b><i>ICML 2022</i></b>. </p>
 </li>
 <li><p>Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Exact Community Recovery over Signed Graphs. <b><i>AISTATS 2022</i></b>. [<a href="https://arxiv.org/pdf/2202.12255.pdf">paper</a>]</p>
 </li>
@@ -115,7 +115,7 @@ Recently, I am especially interested in theoretical understanding of simple and 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-15 11:11:41 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-16 20:00:23 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
