--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@ University of Michigan, Ann Arbor <br />
 <b>Office</b>: Room 3218, EECS Building, 1301 Beal Avenue, Ann Arbor, MI 48109-2122 <br />
 
 
-<b>Email</b>: pengwa [æ-t] umich.edu <br />
+<b>Email</b>: pengwa [æ-t] umich.edu, peng8wang [æ-t] gmail.com <br />
 <a href="https://scholar.google.com/citations?user=baF3HKUAAAAJ&amp;hl=zh-TW">Google Scholar</a></p>
 </td></tr></table>
 <h2>Research Interests </h2>
-<p>My research interests mainly lie in optimization theory and methods for non-convex optimization and their applications in machine learning, signal processing, and data sciences. 
-Recently, I am especially interested in theoretical understanding of simple and scalable methods for structured non-convex problems, such as subspace recovery, community detection, and constriained PCA. </p>
+<p>My research interests mainly lie in optimization theory and methods for non-convex optimization and their applications in machine learning, signal processing, and data sciences. Recently, I am especially interested in theoretical understanding of simple and scalable methods for structured non-convex problems, such as subspace recovery, community detection, constriained PCA, and neural collapse. </p>
 <p><b> Feel free to email me if you are interested in my research. Remote collaboration is also welcome!</b> </p>
 <h2>Work Experience</h2>
 <ul>
@@ -86,7 +85,7 @@ Recently, I am especially interested in theoretical understanding of simple and 
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p><b>Peng Wang</b>, Zirui Zhou, Anthony Man-Cho So. Non-Convex Exact Community Recovery in Stochastic Block Model. Accepted for publication in <b><i>Mathematical Programming, Series A</i></b>, 2021. [<a href="https://arxiv.org/pdf/2006.15843v4.pdf">paper</a>] </p>
+<li><p><b>Peng Wang</b>, Zirui Zhou, Anthony Man-Cho So. Non-Convex Exact Community Recovery in Stochastic Block Model. <b><i>Mathematical Programming, Series A (2021):</i></b> 1-37. [<a href="https://arxiv.org/pdf/2006.15843v4.pdf">paper</a>] </p>
 </li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. Under revision in <b><i>SIAM Journal on Optimization</i></b>, 2022. [<a href="https://arxiv.org/pdf/2107.07107.pdf">paper</a>] </p>
 </li>
@@ -115,7 +114,7 @@ Recently, I am especially interested in theoretical understanding of simple and 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-16 20:17:10 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-16 20:24:34 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
