--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ University of Michigan, Ann Arbor <br />
 <li><p>Department of Systems Engineering and Engineering Management <br />
 <b>The Chinese University of Hong Kong</b>, Hong Kong <br /></p>
 </li>
-<li><p>Advisor: <a href="https://www1.se.cuhk.edu.hk/~manchoso/">Anthony Man-Cho So</a></p>
+<li><p>Advisor: <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-so-man-cho-anthony/">Anthony Man-Cho So</a></p>
 </li>
 </ul>
 
@@ -56,7 +56,7 @@ University of Michigan, Ann Arbor <br />
 <ul>
 <li><p>The Chinese University of Hong Kong, Hong Kong</p>
 </li>
-<li><p>Advisors: <a href="https://www1.se.cuhk.edu.hk/~manchoso/">Anthony Man-Cho So</a> &amp; <a href="https://www.math.ucdavis.edu/~sqma/">Shiqian Ma</a> </p>
+<li><p>Advisors: <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-so-man-cho-anthony/">Anthony Man-Cho So</a> &amp; <a href="https://www.math.ucdavis.edu/~sqma/">Shiqian Ma</a> </p>
 </li>
 <li><p>Thesis: Fast First-Order Methods for Structured Non-Convex Non-Smooth Problems with Provable Guarantees [<a href="https://www.proquest.com/openview/efedba6fef3198199f507741c3cfb1bf/1?pq-origsite=gscholar&amp;cbl=2026366&amp;diss=y">Thesis</a>]</p>
 </li></ul>
@@ -72,9 +72,9 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <h2>News </h2>
 <ul>
-<li><p>[May 15, 2022] One paper accepted by ICML 2022.</p>
+<li><p>[May 15, 2022] One paper has been accepted by ICML 2022.</p>
 </li>
-<li><p>[January 18, 2022] One paper accepted by AISTATS 2022.
+<li><p>[January 18, 2022] One paper has been accepted by AISTATS 2022.
 
 
 
@@ -114,7 +114,7 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-16 20:24:34 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-19 15:54:58 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
