--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <h2>Conference Papers</h2>
 <ul>
-<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Laura Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. Accepted by <b><i>ICML 2022</i></b>. </p>
+<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Laura Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. Accepted by <b><i>ICML 2022</i></b>. [<a href="https://arxiv.org/pdf/2206.05553.pdf">paper</a>] </p>
 </li>
 <li><p>Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Exact Community Recovery over Signed Graphs. <b><i>AISTATS 2022</i></b>. [<a href="https://arxiv.org/pdf/2202.12255.pdf">paper</a>]</p>
 </li>
@@ -114,7 +114,7 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-19 15:54:58 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-06-21 21:01:14 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
