--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ University of Michigan, Ann Arbor <br />
 <li><p>Department of Electrical Engineering and Computer Science <br />
 <b>University of Michigan</b>, Ann Arbor <br /></p>
 </li>
-<li><p>Advisor: <a href="https://web.eecs.umich.edu/~girasole/">Laura Balzano</a><br /></p>
+<li><p>Advisors: <a href="https://web.eecs.umich.edu/~girasole/">Laura Balzano</a> &amp; <a href="https://qingqu.engin.umich.edu/">Qing Qu</a>   <br /> </p>
 </li></ul>
 </li>
 <li><p>Research Associate   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    <i>Oct 2020 &ndash; Nov 2021</i> <br /></p>
@@ -114,7 +114,7 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-21 21:01:14 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-07 11:25:02 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
