--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <h2>News </h2>
 <ul>
-<li><p>[May 15, 2022] One paper has been accepted by ICML 2022.</p>
+<li><p>[September 15, 2022] One paper has been accepted by NeurIPS 2022!</p>
 </li>
-<li><p>[January 18, 2022] One paper has been accepted by AISTATS 2022.
+<li><p>[May 15, 2022] One paper has been accepted by ICML 2022!</p>
+</li>
+<li><p>[January 18, 2022] One paper has been accepted by AISTATS 2022!
 
 
 
@@ -92,8 +94,10 @@ University of Michigan, Ann Arbor <br />
 <li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. Proximal Alternating Linearized Minimization Method with Non-Linear Extrapolation for Rotationally Invariant L1-Norm Principal Component Analysis. In preparation for <b><i>IEEE Transactions on Signal Processing</i></b>, 2022.</p>
 </li>
 </ul>
-<h2>Conference Papers</h2>
+<h2>Conference Papers (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution.)</h2>
 <ul>
+<li><p>Can Yaras*, <b>Peng Wang</b>*, Zhihui Zhu, Laura Balzano, Qing Qu. Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold. Accepted by <b><i>NeurIPS 2022</i></b>.</p>
+</li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Laura Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. Accepted by <b><i>ICML 2022</i></b>. [<a href="https://arxiv.org/pdf/2206.05553.pdf">paper</a>] </p>
 </li>
 <li><p>Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Exact Community Recovery over Signed Graphs. <b><i>AISTATS 2022</i></b>. [<a href="https://arxiv.org/pdf/2202.12255.pdf">paper</a>]</p>
@@ -114,7 +118,7 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-07 11:25:02 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-15 11:00:34 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
