--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <h2>Conference Papers (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution.)</h2>
 <ul>
-<li><p>Can Yaras*, <b>Peng Wang</b>*, Zhihui Zhu, Laura Balzano, Qing Qu. Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold. Accepted by <b><i>NeurIPS 2022</i></b>.</p>
+<li><p>Can Yaras*, <b>Peng Wang</b>*, Zhihui Zhu, Laura Balzano, Qing Qu. Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold. Accepted by <b><i>NeurIPS 2022</i></b>. [<a href="https://arxiv.org/pdf/2209.09211.pdf">paper</a>]</p>
 </li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Laura Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. Accepted by <b><i>ICML 2022</i></b>. [<a href="https://arxiv.org/pdf/2206.05553.pdf">paper</a>] </p>
 </li>
@@ -118,7 +118,7 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-15 11:00:34 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-19 22:44:00 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
