--- a/index.html
+++ b/index.html
@@ -74,18 +74,13 @@ University of Michigan, Ann Arbor <br />
 </li>
 <li><p>[May 15, 2022] One paper has been accepted by ICML 2022!</p>
 </li>
-<li><p>[January 18, 2022] One paper has been accepted by AISTATS 2022!
-
-
-
-
-
-</p>
+<li><p>[January 18, 2022] One paper has been accepted by AISTATS 2022!</p>
 </li>
 </ul>
 <h2>Preprint and Working Papers</h2>
 <ul>
-<li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. Proximal Alternating Linearized Minimization Method with Non-Linear Extrapolation for Rotationally Invariant L1-Norm Principal Component Analysis. In preparation for <b><i>IEEE Transactions on Signal Processing</i></b>, 2022.</p>
+<li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf">paper</a>]
+</p>
 </li>
 </ul>
 <h2>Journal Papers</h2>
@@ -119,7 +114,7 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-06 16:13:53 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-12 18:21:41 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
