--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ University of Michigan, Ann Arbor <br />
 <ul>
 <li><p>The Chinese University of Hong Kong, Hong Kong</p>
 </li>
-<li><p>Advisors: <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-so-man-cho-anthony/">Anthony Man-Cho So</a> &amp; <a href="https://www.math.ucdavis.edu/~sqma/">Shiqian Ma</a> </p>
+<li><p>Advisor: <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-so-man-cho-anthony/">Anthony Man-Cho So</a></p>
 </li>
 <li><p>Thesis: Fast First-Order Methods for Structured Non-Convex Non-Smooth Problems with Provable Guarantees [<a href="https://www.proquest.com/openview/efedba6fef3198199f507741c3cfb1bf/1?pq-origsite=gscholar&amp;cbl=2026366&amp;diss=y">Thesis</a>]</p>
 </li></ul>
@@ -79,8 +79,9 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <h2>Preprint and Working Papers</h2>
 <ul>
-<li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf">paper</a>]
-</p>
+<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Difference-of-Convex Optimization for Chance Constrained Programming. Posted on Arxiv soon, 2022.</p>
+</li>
+<li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf">paper</a>]</p>
 </li>
 </ul>
 <h2>Journal Papers</h2>
@@ -114,7 +115,7 @@ University of Michigan, Ann Arbor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-12 18:21:41 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-24 20:50:36 Eastern Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
