--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ MathJax.Hub.Config({
 <img src="tianlai.jpg" alt="Peng Wang Photo" width="150px" />&nbsp;</td>
 <td align="left"><p><b>Peng Wang</b> <br />
 Postdoc Research Fellow <br />
-<br />
-<a href="https://eecs.engin.umich.edu/" target=&ldquo;blank&rdquo;>Department of Electrical Engineering and Computer Science</a> <br /> 
+</p>
+<p><a href="https://eecs.engin.umich.edu/" target=&ldquo;blank&rdquo;>Department of Electrical Engineering and Computer Science</a> <br /> 
 <a href="https://umich.edu/" target=&ldquo;blank&rdquo;>University of Michigan, Ann Arbor</a> <br />
 <br />
 <b>Office</b>: Room 3218, EECS Building, 1301 Beal Avenue, Ann Arbor, MI 48109-2122 <br />
@@ -82,10 +82,10 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Conference Papers (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution.)</h2>
 <ul>
-<li><p>Can Yaras*, <b>Peng Wang</b>*, Zhihui Zhu, Laura Balzano, Qing Qu. Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold. Accepted by <b><i>NeurIPS 2022</i></b>. [<a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;>paper</a>]
+<li><p><b>Peng Wang</b>*, Huikang Liu*, Can Yaras*, Laura Balzano, Qing Qu. Linear Convergence Analysis of Neural Collapse with Unconstrained Features. Accepted by NeurIPS Workshop on Optimization for Machine Learning, <b><i>OPT 2022</i></b>.
 </p>
 </li>
-<li><p><b>Peng Wang</b>*, Huikang Liu*, Can Yaras*, Laura Balzano, Qing Qu. Linear Convergence Analysis of Neural Collapse with Unconstrained Features. Accepted by NeurIPS Workshop on Optimization for Machine Learning, <b><i>OPT 2022</i></b>.
+<li><p>Can Yaras*, <b>Peng Wang</b>*, Zhihui Zhu, Laura Balzano, Qing Qu. Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold. Accepted by <b><i>NeurIPS 2022</i></b>. [<a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Laura Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. Accepted by <b><i>ICML 2022</i></b>. [<a href="https://arxiv.org/pdf/2206.05553.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
@@ -109,7 +109,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-30 10:28:04 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-10-30 10:33:51 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
