--- a/experience.html
+++ b/experience.html
@@ -24,6 +24,7 @@ MathJax.Hub.Config({
 <div class="menu-category">Peng Wang</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="experience.html" class="current">Experience</a></div>
+<div class="menu-item"><a href="activity.html">Activities</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
