--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ MathJax.Hub.Config({
 <div class="menu-category">Peng Wang</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="experience.html">Experience</a></div>
+<div class="menu-item"><a href="activity.html">Activities</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -109,7 +110,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-30 10:33:51 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-11-06 11:23:25 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
