--- a/index.html
+++ b/index.html
@@ -53,13 +53,16 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[September 15, 2022] One paper has been accepted by NeurIPS 2022!
+<li><p>[November 7, 2022] <a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;>One paper</a> on L1-PCA has been accepted by SIOPT!
 </p>
 </li>
-<li><p>[May 15, 2022] One paper has been accepted by ICML 2022!
+<li><p>[September 15, 2022] <a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;>One paper</a> on neural collapse has been accepted by NeurIPS 2022!
 </p>
 </li>
-<li><p>[January 18, 2022] One paper has been accepted by AISTATS 2022!
+<li><p>[May 15, 2022] One paper on subspace clustering has been accepted by ICML 2022!
+</p>
+</li>
+<li><p>[January 18, 2022] One paper on community recovery has been accepted by AISTATS 2022!
 </p>
 </li>
 </ul>
@@ -77,7 +80,7 @@ Postdoc Research Fellow <br />
 <li><p><b>Peng Wang</b>, Zirui Zhou, Anthony Man-Cho So. Non-Convex Exact Community Recovery in Stochastic Block Model. <b><i>Mathematical Programming, Series A (2021):</i></b> 1-37. [<a href="https://arxiv.org/pdf/2006.15843v4.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
 </p>
 </li>
-<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. Under revision in <b><i>SIAM Journal on Optimization</i></b>, 2022. [<a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
+<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. Accepted by <b><i>SIAM Journal on Optimization</i></b>, 2022. [<a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
 </p>
 </li>
 </ul>
@@ -110,7 +113,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-06 11:23:25 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-11-07 20:26:17 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
