--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p><b>Peng Wang</b>, Zirui Zhou, Anthony Man-Cho So. Non-Convex Exact Community Recovery in Stochastic Block Model. <b><i>Mathematical Programming, Series A (2021):</i></b> 1-37. [<a href="https://arxiv.org/pdf/2006.15843v4.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
+<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. Accepted for publication in <b><i>SIAM Journal on Optimization</i></b>, 2022. [<a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
 </p>
 </li>
-<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. Accepted by <b><i>SIAM Journal on Optimization</i></b>, 2022. [<a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
+<li><p><b>Peng Wang</b>, Zirui Zhou, Anthony Man-Cho So. Non-Convex Exact Community Recovery in Stochastic Block Model. <b><i>Mathematical Programming, Series A (2021):</i></b> 1-37. [<a href="https://arxiv.org/pdf/2006.15843v4.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
 </p>
 </li>
 </ul>
@@ -113,7 +113,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-07 20:26:17 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-11-11 21:27:11 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
