--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ Postdoc Research Fellow <br />
 </p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am currently a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;>Laura Balzano</a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;>Qing Qu</a> at <a href="https://umich.edu/" target=&ldquo;blank&rdquo;>University of Michigan</a>. Before that, I got my Ph.D. degree in Systems Engineering and Engineering Management advised by Professor <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;>Anthony Man-Cho So</a> at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong</a>.
+<p>I am currently a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;>Laura Balzano</a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;>Qing Qu</a> at <a href="https://umich.edu/" target=&ldquo;blank&rdquo;>University of Michigan</a>. Before that, I got my Ph.D. degree in Systems Engineering and Engineering Management advised by Professors <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;>Anthony Man-Cho So</a> and <a href="http://sqma.rice.edu/" target=&ldquo;blank&rdquo;>Shiqian Ma</a> at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong</a>.
 </p>
 <h2>Research Interests </h2>
-<p>My research interests mainly lie in optimization theory and methods for non-convex optimization and their applications in machine learning, signal processing, and data sciences. Recently, I am especially interested in theoretical understanding of simple and scalable methods for non-convex problems with low-dimensional structures, such as subspace recovery, community detection, constriained PCA, and neural collapse. 
+<p>My research interests mainly lie in optimization theory and methods for non-convex optimization problems and their applications in machine learning, signal processing, and data science. Recently, I am especially interested in theoretical understanding of simple and scalable methods for non-convex problems with low-dimensional structures, such as subspace recovery, community detection, constriained PCA, and neural collapse. 
 </p>
 <p><b> Feel free to email me if you are interested in my research. Remote collaboration is also welcome!</b> 
 </p>
@@ -113,7 +113,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-11 21:27:11 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-11-14 11:29:33 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
