--- a/index.html
+++ b/index.html
@@ -44,31 +44,19 @@ Postdoc Research Fellow <br />
 </p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am currently a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;>Laura Balzano</a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;>Qing Qu</a> at <a href="https://umich.edu/" target=&ldquo;blank&rdquo;>University of Michigan</a>. Before that, I got my Ph.D. degree in Systems Engineering and Engineering Management advised by Professors <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;>Anthony Man-Cho So</a> and <a href="http://sqma.rice.edu/" target=&ldquo;blank&rdquo;>Shiqian Ma</a> at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;>the Chinese University of Hong Kong</a>.
+<p>I am currently a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;>Laura Balzano</a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;>Qing Qu</a> at <a href="https://umich.edu/" target=&ldquo;blank&rdquo;>University of Michigan</a>. Before that, I got my Ph.D. degree in Systems Engineering and Engineering Management advised by Professor <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;>Anthony Man-Cho So</a> at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong</a>.
 </p>
 <h2>Research Interests </h2>
-<p>My research interests mainly lie in optimization theory and methods for non-convex optimization problems and their applications in machine learning, signal processing, and data science. Recently, I am especially interested in theoretical understanding of simple and scalable methods for non-convex problems with low-dimensional structures, such as subspace recovery, community detection, constriained PCA, and neural collapse. 
+<p>My research interests mainly lie in non-convex optimization for low-complexity representation learning and their applications in machine learning, signal processing, and data science, such as subspace recovery, community detection, constriained PCA, and neural collapse. Currently, I am devoted to understanding mathematical insights into deep learning via low-complexity modeling and non-convex optimization. 
 </p>
 <p><b> Feel free to email me if you are interested in my research. Remote collaboration is also welcome!</b> 
 </p>
-<h2>What's New</h2>
-<ul>
-<li><p>[November 7, 2022] <a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;>One paper</a> on L1-PCA has been accepted by SIOPT!
-</p>
-</li>
-<li><p>[September 15, 2022] <a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;>One paper</a> on neural collapse has been accepted by NeurIPS 2022!
-</p>
-</li>
-<li><p>[May 15, 2022] One paper on subspace clustering has been accepted by ICML 2022!
-</p>
-</li>
-<li><p>[January 18, 2022] One paper on community recovery has been accepted by AISTATS 2022!
-</p>
-</li>
-</ul>
 <h2>Preprint and Working Papers</h2>
 <ul>
-<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results, Submitted to <b><i>SIAM Journal on Optimization</i></b> 2023. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;>paper</a>]
+<li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks, 2023. In submission. [<a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;>paper</a>]
+</p>
+</li>
+<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results, 2023. Submitted to <b><i>SIAM Journal on Optimization</i></b>. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
 <li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf" target=&ldquo;blank&rdquo;>paper</a>]
@@ -77,22 +65,25 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. Accepted for publication in <b><i>SIAM Journal on Optimization</i></b>, 2022. [<a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
+<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. <b><i>SIAM Journal on Optimization</i></b> (2023) 33(2):684-712. [<a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
 </p>
 </li>
-<li><p><b>Peng Wang</b>, Zirui Zhou, Anthony Man-Cho So. Non-Convex Exact Community Recovery in Stochastic Block Model. <b><i>Mathematical Programming, Series A (2021):</i></b> 1-37. [<a href="https://arxiv.org/pdf/2006.15843v4.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
+<li><p><b>Peng Wang</b>, Zirui Zhou, Anthony Man-Cho So. Non-Convex Exact Community Recovery in Stochastic Block Model. <b><i>Mathematical Programming, Series A</i></b> (2022) 195(1-2):793-829. [<a href="https://arxiv.org/pdf/2006.15843v4.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
 </p>
 </li>
 </ul>
 <h2>Conference Papers (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution.)</h2>
 <ul>
+<li><p>Jinxin Wang, Yuen-Man Pun, Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Projected Tensor Power Method for Hypergraph Community Recovery. <b><i>ICML 2023</i></b>.  [<a href="https://openreview.net/pdf?id=CcDKqUR546" target=&ldquo;blank&rdquo;>paper</a>]
+</p>
+</li>
 <li><p><b>Peng Wang</b>*, Huikang Liu*, Can Yaras*, Laura Balzano, Qing Qu. Linear Convergence Analysis of Neural Collapse with Unconstrained Features. Accepted by NeurIPS Workshop on Optimization for Machine Learning, <b><i>OPT 2022</i></b>.
 </p>
 </li>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Zhihui Zhu, Laura Balzano, Qing Qu. Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold. Accepted by <b><i>NeurIPS 2022</i></b>. [<a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Laura Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. Accepted by <b><i>ICML 2022</i></b>. [<a href="https://arxiv.org/pdf/2206.05553.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
+<li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Laura Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. <b><i>ICML 2022</i></b>. [<a href="https://arxiv.org/pdf/2206.05553.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
 </p>
 </li>
 <li><p>Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Exact Community Recovery over Signed Graphs. <b><i>AISTATS 2022</i></b>. [<a href="https://arxiv.org/pdf/2202.12255.pdf" target=&ldquo;blank&rdquo;>paper</a>]
@@ -113,7 +104,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-21 09:45:20 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-10-01 18:49:19 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
