--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@ Postdoc Research Fellow <br />
 </p>
 <p><b> Feel free to email me if you are interested in my research. Remote collaboration is also welcome!</b> 
 </p>
-<h2>Preprint and Working Papers</h2>
+<h2>Preprint Papers</h2>
 <ul>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks, 2023. In submission. [<a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
 <li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results, 2023. Submitted to <b><i>SIAM Journal on Optimization</i></b>. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;>paper</a>]
+</p>
+</li>
+<li><p>Jiachen Jiang, Jinxin Zhou, <b>Peng Wang</b>, Qing Qu, Dustin Mixon, Chong You, Zhihui Zhu. Generalized Neural Collapse for a Large Number of Classes. Submitted to <b><i>ICLR 2023</i></b>. [<a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
 <li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf" target=&ldquo;blank&rdquo;>paper</a>]
@@ -77,10 +80,10 @@ Postdoc Research Fellow <br />
 <li><p>Jinxin Wang, Yuen-Man Pun, Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Projected Tensor Power Method for Hypergraph Community Recovery. <b><i>ICML 2023</i></b>.  [<a href="https://openreview.net/pdf?id=CcDKqUR546" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>*, Huikang Liu*, Can Yaras*, Laura Balzano, Qing Qu. Linear Convergence Analysis of Neural Collapse with Unconstrained Features. Accepted by NeurIPS Workshop on Optimization for Machine Learning, <b><i>OPT 2022</i></b>.
+<li><p><b>Peng Wang</b>*, Huikang Liu*, Can Yaras*, Laura Balzano, Qing Qu. Linear Convergence Analysis of Neural Collapse with Unconstrained Features. NeurIPS Workshop on Optimization for Machine Learning, <b><i>OPT 2022</i></b>. [<a href="https://openreview.net/pdf?id=WC9im-M_y5" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
-<li><p>Can Yaras*, <b>Peng Wang</b>*, Zhihui Zhu, Laura Balzano, Qing Qu. Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold. Accepted by <b><i>NeurIPS 2022</i></b>. [<a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;>paper</a>]
+<li><p>Can Yaras*, <b>Peng Wang</b>*, Zhihui Zhu, Laura Balzano, Qing Qu. Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold. <b><i>NeurIPS 2022</i></b>. [<a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So, Laura Balzano. Convergence and Recovery Guarantees of the K-Subspaces Method for Subspace Clustering. <b><i>ICML 2022</i></b>. [<a href="https://arxiv.org/pdf/2206.05553.pdf" target=&ldquo;blank&rdquo;>paper</a>] 
@@ -104,7 +107,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-01 18:49:19 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-10-22 08:00:18 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
