--- a/experience.html
+++ b/experience.html
@@ -66,14 +66,14 @@ MathJax.Hub.Config({
 <li><p>The Chinese University of Hong Kong, Hong Kong
 </p>
 </li>
-<li><p>Advisor: <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-so-man-cho-anthony/" target=&ldquo;blank&rdquo;>Anthony Man-Cho So</a> &amp; <a href="https://www.math.ucdavis.edu/~sqma/" target=&ldquo;blank&rdquo;>Shiqian Ma</a> 
+<li><p>Advisor: <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-so-man-cho-anthony/" target=&ldquo;blank&rdquo;>Anthony Man-Cho So</a> 
 </p>
 </li>
 <li><p>Thesis: Fast First-Order Methods for Structured Non-Convex Non-Smooth Problems with Provable Guarantees [<a href="https://www.proquest.com/openview/efedba6fef3198199f507741c3cfb1bf/1?pq-origsite=gscholar&amp;cbl=2026366&amp;diss=y" target=&ldquo;blank&rdquo;>Thesis</a>]
 </p>
 </li></ul>
 </li>
-<li><p>Bachelor in Engineering Management &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i>2012 &ndash; 2016</i> <br />
+<li><p>Bachelor &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i>2012 &ndash; 2016</i> <br />
 
 </p>
 <ul>
@@ -89,13 +89,13 @@ MathJax.Hub.Config({
 <li><p>Conference Reviewer: 
 </p>
 <ul>
-<li><p>Neural Information Processing Systems (NeurIPS) 2022
+<li><p>Neural Information Processing Systems (NeurIPS) 2022, 2023
 </p>
 </li>
-<li><p>International Conference on Machine Learning (ICML) 2021, 2022 
+<li><p>International Conference on Machine Learning (ICML) 2021, 2022, 2023 
 </p>
 </li>
-<li><p>International Conference on Learning Representations (ICLR) 2023
+<li><p>International Conference on Learning Representations (ICLR) 2023, 2024
 </p>
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (AISTATS) 2022, 2023
@@ -110,13 +110,16 @@ MathJax.Hub.Config({
 <li><p>Journal Reviewer:
 </p>
 <ul>
-<li><p>SIAM Journal on Optimization (4 times)
+<li><p>IEEE Transactions on Pattern Analysis and Machine Intelligence  
 </p>
 </li>
-<li><p>IEEE Transactions on Information Theory (1 times)
+<li><p>SIAM Journal on Optimization
 </p>
 </li>
-<li><p>Journal of Global Optimization (1 times)</p>
+<li><p>IEEE Transactions on Information Theory 
+</p>
+</li>
+<li><p>Journal of Global Optimization </p>
 </li>
 </ul>
 
