--- a/index.html
+++ b/index.html
@@ -51,6 +51,29 @@ Postdoc Research Fellow <br />
 </p>
 <p><b> Feel free to email me if you are interested in my research. Remote collaboration is also welcome!</b> 
 </p>
+<h2>What's New</h2>
+<ul>
+<li><p>[October, 2023] I was selected to receive the <a href="https://cpal.cc/rising_stars" target=&ldquo;blank&rdquo;><b>Rising Star Award</b></a> at <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CPAL 2024</b></a>! 
+</p>
+</li>
+<li><p>[October, 2023] <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;>One paper</a> on the <b>generalized neural collapse</b> is posted! 
+</p>
+</li>
+<li><p>[June, 2023] <a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;>One paper</a> on the <b>low-dimensional updates</b> of gradient descent for deep networks is posted!
+</p>
+</li>
+<li><p>[April, 2023] <a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;>One paper</a> on <b>chance constrained programming</b> is posted!  
+</p>
+</li>
+<li><p>[November, 2022] <a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;>One paper</a> on L1-PCA has been accepted by SIOPT!
+</p>
+</li>
+<li><p>[Septembe, 2022] <a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;>One paper</a> on neural collapse has been accepted by NeurIPS 2022!
+
+
+</p>
+</li>
+</ul>
 <h2>Preprint Papers</h2>
 <ul>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks, 2023. In submission. [<a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;>paper</a>]
@@ -107,7 +130,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-22 08:00:18 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-10-31 11:16:34 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
