--- a/index.html
+++ b/index.html
@@ -100,10 +100,13 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Conference Papers (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution.)</h2>
 <ul>
+<li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. Invariant Low-Dimensional Subspaces in Gradient Descent for Learning Deep Matrix Factorizations. To appear in <b><i>NeurIPS M3L 2023</i></b>.
+</p>
+</li>
 <li><p>Jinxin Wang, Yuen-Man Pun, Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Projected Tensor Power Method for Hypergraph Community Recovery. <b><i>ICML 2023</i></b>.  [<a href="https://openreview.net/pdf?id=CcDKqUR546" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>*, Huikang Liu*, Can Yaras*, Laura Balzano, Qing Qu. Linear Convergence Analysis of Neural Collapse with Unconstrained Features. NeurIPS Workshop on Optimization for Machine Learning, <b><i>OPT 2022</i></b>. [<a href="https://openreview.net/pdf?id=WC9im-M_y5" target=&ldquo;blank&rdquo;>paper</a>]
+<li><p><b>Peng Wang</b>*, Huikang Liu*, Can Yaras*, Laura Balzano, Qing Qu. Linear Convergence Analysis of Neural Collapse with Unconstrained Features. NeurIPS Workshop on Optimization for Machine Learning, <b><i>NeurIPS OPT 2022</i></b>. [<a href="https://openreview.net/pdf?id=WC9im-M_y5" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Zhihui Zhu, Laura Balzano, Qing Qu. Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold. <b><i>NeurIPS 2022</i></b>. [<a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;>paper</a>]
@@ -130,7 +133,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-01 09:57:38 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-11-01 10:02:01 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
