--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[November, 2023] <a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;>One paper</a> on understanding <b>hierarchical representation learning</b> via low-dimensinoal modeling is posted!  
+</p>
+</li>
 <li><p>[October, 2023] I was selected to receive the <a href="https://cpal.cc/rising_stars" target=&ldquo;blank&rdquo;><b>Rising Star Award</b></a> at <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CPAL 2024</b></a>! 
 </p>
 </li>
@@ -76,10 +79,13 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprint Papers</h2>
 <ul>
+<li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination, 2023. In submission. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;>paper</a>]
+</p>
+</li>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks, 2023. In submission. [<a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results, 2023. Submitted to <b><i>SIAM Journal on Optimization</i></b>. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;>paper</a>]
+<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results. Submitted to <b><i>SIAM Journal on Optimization</i></b>, 2023. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
 <li><p>Jiachen Jiang, Jinxin Zhou, <b>Peng Wang</b>, Qing Qu, Dustin Mixon, Chong You, Zhihui Zhu. Generalized Neural Collapse for a Large Number of Classes. Submitted to <b><i>ICLR 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;>paper</a>]
@@ -133,7 +139,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-01 10:02:01 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-11-07 23:46:34 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
