--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Postdoc Research Fellow <br />
 <li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results. Submitted to <b><i>SIAM Journal on Optimization</i></b>, 2023. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
-<li><p>Jiachen Jiang, Jinxin Zhou, <b>Peng Wang</b>, Qing Qu, Dustin Mixon, Chong You, Zhihui Zhu. Generalized Neural Collapse for a Large Number of Classes. [<a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;>paper</a>]
+<li><p>Jiachen Jiang, Jinxin Zhou, <b>Peng Wang</b>, Qing Qu, Dustin Mixon, Chong You, Zhihui Zhu. Generalized Neural Collapse for a Large Number of Classes, 2023. [<a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;>paper</a>]
 </p>
 </li>
 <li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf" target=&ldquo;blank&rdquo;>paper</a>]
@@ -139,7 +139,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-19 00:10:29 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-01-19 00:13:51 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
